  - New: added command *pel-delete-line* to delete text from point to end
    of line without copying it to the kill ring.  It is bound to ``C-K`` (in
    graphics mode only) and to ``<f11> DEL e`` key sequence.
  - New: added command *pel-delete-from-beginning-of-line* bound to ``<f11>
    DEL a``.
  - Update: the kill and delete commands are no longer allowed in read-only
    buffer.
- Update: *File Management*:
  - New: key binding ``<f11> f M-l`` to find-file-literally``.
  - New: command *pel-show-buffer-file-encoding*, bound to ``<f11> f ?`` that
    shows the encoding of the file in current buffer by opening the *Help*
    buffer showing the value of Emacs variable buffer-file-coding-system.
  - Improved: *pel-open-at-point* is now able to open a file when its name is
    immediately followed by a colon character.  Useful when trying to open the
    file whose name is shown in the result of a grep command.
- Update: *Grep*:
  - New: Added key bindings for [[https://github.com/ggreer/the_silver_searcher][ag]] (the silver searcher) based grep-style
    search.
- Update: *Help*:
  - New: Added a command (<f11> ? e c) to open a local copy of
    one of the [[https://www.gnu.org/software/emacs/refcards/index.html][Emacs PDF reference cards]]. The new *pel-emacs-refcard-dirpath*
    user option identifies a directory where Emacs PDF refcards are stored. If
    you set that user option PEL uses it to locate the Emacs PDF refcards,
    otherwise it attempts to locate it.  Under macOS automatic location often
    works nicely because the Emacs reference cards are stored in PDF format.
    On Linux platforms the refcards are stored in .tex format and PEL does not
    attempt to build or render the .tex files, so its often best to download
    the PDF files, store them in a directory and identify that location in the
    user option.
  - New: key binding to a command to display Emacs executable path: <f11> ? e x.