@@ -163,6 +163,12 @@ PEL -- Pragmatic Environment Library --  NEWS         -*- org -*-
     DEL a``.
   - Update: the kill and delete commands are no longer allowed in read-only
     buffer.
+- Update: *ERT - Emacs Regression Test* support:
+  * New: *pel-ert.el* file that defines a set of equality and inequality
+    predicates that are meant to be used in ert-deftest forms.  You can use these
+    inequality functions to pass extra arguments whose values will be shown in
+    the ERT failure report when the test fails, providing extra information.
+    Pass test control variables to these extra arguments.
 - Update: *File Management*:
   - New: key binding ``<f11> f M-l`` to find-file-literally``.
   - New: command *pel-show-buffer-file-encoding*, bound to ``<f11> f ?`` that
